Set up distribution and GH Actions